--- a/auth/package.json
+++ b/auth/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jglondonexperiences/common": "^1.0.2",
     "@types/cookie-session": "^2.0.45",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
