--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@jglondonexperiences/common": "^1.0.2",
+    "@jglondonexperiences/common": "^1.0.3",
     "@types/cookie-session": "^2.0.45",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -28,6 +28,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
