--- a/orders/package.json
+++ b/orders/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tickets",
+  "name": "orders",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "ts-node-dev --poll src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
   "jest": {
@@ -18,26 +18,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@jglondonexperiences/common": "^1.0.5",
-    "@types/cookie-session": "^2.0.45",
+    "@jglondonexperiences/common": "^1.0.7",
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
-    "jest": "^29.6.4",
-    "mongodb-memory-server": "^8.15.1",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.12.2",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.0"
   }
 }
